# ai-engineering-journey

./: .gitignore  README.md
docs/: NEXT_STEPS.md
docs/superpowers/plans/: 2026-04-12-fase4-finetuning.md  2026-04-13-fase5-production.md
docs/superpowers/specs/: 2026-04-12-fase4-finetuning-design.md  2026-04-13-fase5-production-design.md
fase1-rag/: CLAUDE.md  NEXT_STEPS.md  README.md  pyproject.toml
fase1-rag/data/: papers_index.json
fase1-rag/src/: __init__.py  download_papers.py  embeddings.py  generation.py  ingestion.py  pipeline.py  retrieval.py
fase1-rag/tests/: __init__.py  test_embeddings.py  test_generation.py  test_ingestion.py  test_pipeline.py  test_retrieval.py
fase2-evals/: .gitignore  CLAUDE.md  NEXT_STEPS.md  pyproject.toml
fase2-evals/data/: eval_dataset.json
fase2-evals/src/: __init__.py  dataset.py  evaluator.py  metrics_generation.py  metrics_retrieval.py  report.py  run_eval.py
fase2-evals/tests/: test_dataset.py  test_evaluator.py  test_metrics_generation.py  test_metrics_retrieval.py  test_run_eval.py
fase2-evals/tests/integration/: test_integration.py
fase3-agents/: NEXT_STEPS.md  pyproject.toml
fase3-agents/src/: agent.py  prompt.py  run_agent.py  tools.py
fase3-agents/tests/: test_agent.py  test_tools.py
fase4-finetuning/: CLAUDE.md  pyproject.toml
fase4-finetuning/src/: evaluate.py  export.py  generate_dataset.py  train.py
fase4-finetuning/tests/: test_evaluate.py  test_export.py  test_generate_dataset.py  test_integration.py  test_train.py
fase5-production/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
fase5-production/src/: agent_adapter.py  api.py  cache.py  middleware.py  monitor.py  rag_adapter.py  router.py  streaming.py
fase5-production/tests/: test_agent_adapter.py  test_api.py  test_cache.py  test_integration.py  test_middleware.py  test_monitor.py  test_rag_adapter.py  test_router.py  test_streaming.py
