[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "fase2-evals"
version = "0.1.0"
description = "Sistema de avaliação (evals) para o pipeline RAG da Fase 1"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "ollama>=0.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "rich>=13.0.0",
]

[project.scripts]
eval-run = "src.run_eval:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requer Ollama e ChromaDB rodando"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
