[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "fase4-finetuning"
version = "0.1.0"
description = "Fine-tuning supervisionado com QLoRA para melhorar qualidade RAG"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "ollama>=0.3.0",
    "datasets>=3.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
generate-dataset = "src.generate_dataset:main"
train-model = "src.train:main"
export-model = "src.export:main"
evaluate-model = "src.evaluate:main"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requer Ollama, ChromaDB e GPU rodando"]
